--- a/privacy.html
+++ b/privacy.html
@@ -39,6 +39,13 @@
             border-bottom: 1px solid var(--bg-interactive);
             padding-bottom: 10px;
         }
+        .legal-document h3 {
+            font-size: 1.2em;
+            color: var(--text-primary);
+            margin-top: 25px;
+            margin-bottom: 15px;
+            font-weight: 600;
+        }
         .legal-document p, .legal-document ul {
             color: var(--text-secondary);
             margin-bottom: 15px;
@@ -101,7 +108,28 @@
                     <li><strong>Content Filtering:</strong> AI services may apply content filtering to prevent generation of inappropriate material.</li>
                 </ul>
 
-                <h2>4. AI Content Responsibilities and Limitations</h2>
+                <h2>4. Face Data Policy</h2>
+
+                <h3>4.1 Data Collection</h3>
+                <p>We collect face data solely through the photos you explicitly upload to the KlipCam application for the purpose of generating customized AI avatars and photos.</p>
+
+                <h3>4.2 Purpose of Collection</h3>
+                <p>Face data is used exclusively to train temporary AI models and generate personalized images and videos as requested by you within the app. We do not use your face data for authentication, advertising, or identification purposes.</p>
+
+                <h3>4.3 Data Retention</h3>
+                <p>Face data and the original photos you upload are retained only for the duration necessary to complete the AI generation process (typically less than 24 hours). Once the generation is complete and the results are delivered to your device, the face data and original uploads are permanently deleted from our servers.</p>
+
+                <h3>4.4 Data Sharing</h3>
+                <p>We do not sell, trade, or otherwise transfer your face data to outside parties, except to our trusted third-party AI processing providers solely for the purpose of generating your content.</p>
+                <ul>
+                    <li><strong>Third-Party Providers:</strong> We utilize Replicate and Supabase to process image generation.</li>
+                    <li><strong>Privacy Practices:</strong> These providers are contractually obligated to protect your data, use it only for the requested generation task, and delete it immediately after processing. They do not use your data for training their own foundational models.</li>
+                </ul>
+
+                <h3>4.5 Consent</h3>
+                <p>By using the AI generation features in KlipCam, you explicitly consent to the collection, processing, and temporary storage of your face data as described above.</p>
+
+                <h2>5. AI Content Responsibilities and Limitations</h2>
                 <p>Important information about AI-generated content:</p>
                 <ul>
                     <li><strong>Artificial Creation:</strong> All generated images and videos are artificial and should not be presented as real photographs or footage.</li>
@@ -112,7 +140,7 @@
                     <li><strong>Quality Variation:</strong> AI-generated results may vary in quality and accuracy.</li>
                 </ul>
 
-                <h2>5. Third-Party AI Services</h2>
+                <h2>6. Third-Party AI Services</h2>
                 <p>We use the following third-party services to provide our functionality:</p>
                 <ul>
                     <li><strong>Replicate:</strong> AI image and video generation service that temporarily processes your images.</li>
@@ -122,7 +150,7 @@
                 </ul>
                 <p>These services have their own privacy policies and data handling practices. Your images are only sent to these services when you actively request AI generation.</p>
 
-                <h2>6. Subscriptions, Credits, and Purchases</h2>
+                <h2>7. Subscriptions, Credits, and Purchases</h2>
                 <p>Our financial system works as follows:</p>
                 <ul>
                     <li><strong>Credit tracking:</strong> Your credit balance is stored locally and optionally synced via CloudKit/Supabase.</li>
@@ -132,7 +160,7 @@
                     <li><strong>No financial data:</strong> We do not collect or store payment information (handled entirely by Apple).</li>
                 </ul>
 
-                <h2>7. Data Retention and Storage</h2>
+                <h2>8. Data Retention and Storage</h2>
                 <ul>
                     <li><strong>Local data:</strong> Images and app data remain on your device until you delete them.</li>
                     <li><strong>Server data:</strong> No personal images are permanently stored on our servers.</li>
@@ -140,7 +168,7 @@
                     <li><strong>Purchase records:</strong> Maintained by Apple according to their retention policies.</li>
                 </ul>
 
-                <h2>8. Your Privacy Rights</h2>
+                <h2>9. Your Privacy Rights</h2>
                 <p>You have complete control over your data:</p>
                 <ul>
                     <li><strong>Delete app data:</strong> You can use the "Reset App Data" or "Delete Account" feature in Settings to wipe your local and server-side data.</li>
@@ -150,7 +178,7 @@
                     <li><strong>Purchase history:</strong> Managed through your Apple ID account settings.</li>
                 </ul>
 
-                <h2>9. Data Security</h2>
+                <h2>10. Data Security</h2>
                 <p>We implement security measures to protect your information:</p>
                 <ul>
                     <li><strong>Secure storage:</strong> Device identifier stored in iOS keychain with hardware encryption.</li>
@@ -159,7 +187,7 @@
                     <li><strong>No account vulnerabilities:</strong> Optional accounts use Apple Sign-In, leveraging Apple's security.</li>
                 </ul>
 
-                <h2>10. Children's Privacy and AI Content</h2>
+                <h2>11. Children's Privacy and AI Content</h2>
                 <p>Our app does not knowingly collect personal information from children under 13. However, due to AI content generation capabilities:</p>
                 <ul>
                     <li><strong>Age Restriction:</strong> Users should not upload images of anyone under 18 years of age.</li>
@@ -168,10 +196,10 @@
                     <li><strong>No Personal Data:</strong> We do not collect personal information, but AI processing may involve biometric patterns.</li>
                 </ul>
 
-                <h2>11. Changes to This Privacy Policy</h2>
+                <h2>12. Changes to This Privacy Policy</h2>
                 <p>We may update this Privacy Policy from time to time. When we do, we will revise the "Last updated" date at the top of this policy. Continued use of the app after changes constitutes acceptance of the updated policy.</p>
 
-                <h2>12. Contact Us</h2>
+                <h2>13. Contact Us</h2>
                 <p>If you have any questions about this Privacy Policy or our privacy practices, please contact us:</p>
                 <ul>
                     <li>Company: MILIVON</li>
@@ -179,7 +207,7 @@
                     <li>Website: www.klipcam.com</li>
                 </ul>
 
-                <h2>13. Governing Law</h2>
+                <h2>14. Governing Law</h2>
                 <p>This Privacy Policy is governed by the laws of your jurisdiction. For users in the European Union, this policy complies with GDPR requirements for anonymous data processing.</p>
                 
                 <a href="index.html" class="back-link">← Back to Home</a>
