--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@
             </div>
         </section>
 
+        <section id="support" class="glass-section">
+            <div class="container">
+                <h3>Need Help?</h3>
+                <p>Have questions, feedback, or need assistance? We're here to help!</p>
+                <a href="mailto:support@klipcam.com" class="btn primary-btn">Contact Support</a>
+            </div>
+        </section>
+
         <section id="legal" class="glass-section legal-links">
             <div class="container">
                 <h3>Legal Information</h3>
