--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <!-- Schema.org Markup -->
     <script type="application/ld+json">
@@ -53,7 +54,9 @@
             <h2>The Ultimate AI Photo & Video Editor for Creators</h2>
             <p>Transform your photos into viral AI videos & create stunning AI avatars instantly. Get 10 IG-ready images in under 5 minutes.</p>
             <div class="cta-buttons">
-                <a href="#" class="btn primary-btn">Download on the App Store</a>
+                <a href="#" class="app-store-btn">
+                    <img src="app-store-badge.svg" alt="Download on the App Store">
+                </a>
             </div>
             <!-- App Screenshots -->
             <div class="app-showcase">
@@ -69,26 +72,32 @@
                 <h3>Unleash Your Creativity</h3>
                 <div class="feature-grid">
                     <div class="feature-item">
+                        <i class="fas fa-images feature-icon"></i>
                         <h4>AI Photo Packs</h4>
                         <p>Get instant professional sets: Travel, LinkedIn Headshots, Holidays, Dating Profiles, and more.</p>
                     </div>
                     <div class="feature-item">
+                        <i class="fas fa-user-astronaut feature-icon"></i>
                         <h4>AI Influencers & Avatars</h4>
                         <p>Design your perfect digital persona. Customize look and style for Instagram, TikTok & YouTube.</p>
                     </div>
                     <div class="feature-item">
+                        <i class="fas fa-film feature-icon"></i>
                         <h4>Photo to Video Converter</h4>
                         <p>Turn static photos into dynamic, viral-ready videos. Perfect for Reels and Shorts.</p>
                     </div>
                     <div class="feature-item">
+                        <i class="fas fa-wand-magic-sparkles feature-icon"></i>
                         <h4>Premium Editing Tools</h4>
                         <p>Face Swap, Background Removal, AI Upscaling, and Style Transfer at your fingertips.</p>
                     </div>
                     <div class="feature-item">
+                        <i class="fas fa-palette feature-icon"></i>
                         <h4>Diverse Style Library</h4>
                         <p>100+ professional presets: Cinematic, Fashion, Artistic, and Trending Social Filters.</p>
                     </div>
                     <div class="feature-item">
+                        <i class="fas fa-briefcase feature-icon"></i>
                         <h4>Commercial Rights</h4>
                         <p>Create professional content for your brand or business with full commercial usage rights.</p>
                     </div>
@@ -101,18 +110,24 @@
                 <h3>How It Works</h3>
                 <div class="steps">
                     <div class="step-item">
-                        <span class="step-number">1</span>
-                        <h4>Upload Your Selfies</h4>
+                        <div class="step-icon-wrapper">
+                            <i class="fas fa-cloud-upload-alt step-icon"></i>
+                        </div>
+                        <h4>1. Upload Your Selfies</h4>
                         <p>Select 10 of your best selfies to get started.</p>
                     </div>
                     <div class="step-item">
-                        <span class="step-number">2</span>
-                        <h4>Choose Your Style</h4>
+                        <div class="step-icon-wrapper">
+                            <i class="fas fa-paint-brush step-icon"></i>
+                        </div>
+                        <h4>2. Choose Your Style</h4>
                         <p>Browse our extensive library and pick a style that inspires you.</p>
                     </div>
                     <div class="step-item">
-                        <span class="step-number">3</span>
-                        <h4>Generate & Share</h4>
+                        <div class="step-icon-wrapper">
+                            <i class="fas fa-share-square step-icon"></i>
+                        </div>
+                        <h4>3. Generate & Share</h4>
                         <p>Watch AI work its magic and share your new look with the world!</p>
                     </div>
                 </div>
@@ -132,6 +147,7 @@
                 <h3>Legal Information</h3>
                 <ul>
                     <li><a href="terms.html">Terms of Service</a></li>
+                    <li><a href="help.html">Help Center</a></li>
                     <li><a href="privacy.html">Privacy Policy</a></li>
                 </ul>
             </div>
