--- a/index.html
+++ b/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KlipCam - AI Photo & Video Editor | Create Avatars & Viral Content</title>
-    <meta name="description" content="Transform your photos into viral AI videos & create stunning AI avatars instantly. The #1 AI photo & video editor for creators. Start free today!">
-    <meta name="keywords" content="ai photo, ai video, photo editor, video maker, ai avatar, ai influencer, face swap, ai art, reels, tiktok, content creator, photo packs">
+    <meta name="description"
+        content="Transform your photos into viral AI videos & create stunning AI avatars instantly. The #1 AI photo & video editor for creators. Start free today!">
+    <meta name="keywords"
+        content="ai photo, ai video, photo editor, video maker, ai avatar, ai influencer, face swap, ai art, reels, tiktok, content creator, photo packs">
     <meta name="author" content="MILIVON">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.klipcam.com/">
     <meta property="og:title" content="KlipCam - AI Photo & Video Editor">
-    <meta property="og:description" content="Create 10 IG-ready images in under 5 minutes from 10 selfies. The ultimate AI creative studio for generating viral content.">
+    <meta property="og:description"
+        content="Create 10 IG-ready images in under 5 minutes from 10 selfies. The ultimate AI creative studio for generating viral content.">
     <meta property="og:image" content="app-icon.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.klipcam.com/">
     <meta property="twitter:title" content="KlipCam - AI Photo & Video Editor">
-    <meta property="twitter:description" content="Transform your photos into viral AI videos & create stunning AI avatars instantly.">
+    <meta property="twitter:description"
+        content="Transform your photos into viral AI videos & create stunning AI avatars instantly.">
     <meta property="twitter:image" content="app-icon.png">
 
     <link rel="stylesheet" href="style.css">
@@ -46,17 +51,21 @@
     }
     </script>
 </head>
+
 <body>
     <header class="hero-section">
         <div class="container">
-            <img src="app-icon.png" alt="KlipCam App Icon" class="app-icon">
-            <h1>KlipCam</h1>
-            <h2>The Ultimate AI Photo & Video Editor for Creators</h2>
-            <p>Transform your photos into viral AI videos & create stunning AI avatars instantly. Get 10 IG-ready images in under 5 minutes.</p>
-            <div class="cta-buttons">
-                <a href="#" class="app-store-btn">
-                    <img src="app-store-badge.svg" alt="Download on the App Store">
-                </a>
+            <div class="hero-content">
+                <img src="app-icon.png" alt="KlipCam App Icon" class="app-icon">
+                <h1>KlipCam</h1>
+                <h2>The Ultimate AI Photo & Video Editor for Creators</h2>
+                <p>Transform your photos into viral AI videos & create stunning AI avatars instantly. Get 10 IG-ready
+                    images in under 5 minutes.</p>
+                <div class="cta-buttons">
+                    <a href="#" class="app-store-btn">
+                        <img src="app-store-badge.svg" alt="Download on the App Store">
+                    </a>
+                </div>
             </div>
             <!-- App Screenshots -->
             <div class="app-showcase">
@@ -74,12 +83,14 @@
                     <div class="feature-item">
                         <i class="fas fa-images feature-icon"></i>
                         <h4>AI Photo Packs</h4>
-                        <p>Get instant professional sets: Travel, LinkedIn Headshots, Holidays, Dating Profiles, and more.</p>
+                        <p>Get instant professional sets: Travel, LinkedIn Headshots, Holidays, Dating Profiles, and
+                            more.</p>
                     </div>
                     <div class="feature-item">
                         <i class="fas fa-user-astronaut feature-icon"></i>
                         <h4>AI Influencers & Avatars</h4>
-                        <p>Design your perfect digital persona. Customize look and style for Instagram, TikTok & YouTube.</p>
+                        <p>Design your perfect digital persona. Customize look and style for Instagram, TikTok &
+                            YouTube.</p>
                     </div>
                     <div class="feature-item">
                         <i class="fas fa-film feature-icon"></i>
@@ -160,4 +171,5 @@
         </div>
     </footer>
 </body>
+
 </html>
